--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
+    "next-images": "^1.8.4",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "^7.1.1"
+    "react-markdown": "^7.1.1",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
     "@types/node": "17.0.0",
