--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
+    "@types/webpack-env": "^1.16.3",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.4"
