--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
-    "next": "12.0.7",
+    "next": "^14.0.4",
     "next-images": "^1.8.4",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
